2008-07-02  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accessible_treeview.py: Fixed
	UnboundLocalError (bug #540166).

2008-06-16  Eitan Isaacson  <eitan@ascender.com>

	* confugure.in: Set trunk version to 1.3.5.
	
	* NEWS: 
	* confugure.in:
	* README: Updated to version 1.3.4.

2008-06-12  Eitan Isaacson  <eitan@ascender.com>

	* pyreqs.py: Make pyreqs behave nicely in a headless build
	environment (bug #528828).

	* po/LINGUAS: Fixed build issue - bugs 537272 and 536468. 
	Thanks David Fuereder!

	* accerciser.desktop.in.in: 
	* po/ar.po: 
	* po/bg.po: 
	* po/bn.po: 
	* po/bn_IN.po: 
	* po/ca.po: 
	* po/cs.po: 
	* po/da.po: 
	* po/de.po: 
	* po/dz.po: 
	* po/el.po: 
	* po/en_CA.po: 
	* po/en_GB.po: 
	* po/es.po: 
	* po/fi.po: 
	* po/fr.po: 
	* po/gl.po: 
	* po/gu.po: 
	* po/he.po: 
	* po/hi.po: 
	* po/hu.po: 
	* po/it.po: 
	* po/ja.po: 
	* po/lt.po: 
	* po/lv.po: 
	* po/mk.po: 
	* po/ml.po: 
	* po/nb.po: 
	* po/nl.po: 
	* po/oc.po: 
	* po/or.po: 
	* po/pa.po: 
	* po/pl.po: 
	* po/pt.po: 
	* po/pt_BR.po: 
	* po/ru.po: 
	* po/si.po: 
	* po/sl.po: 
	* po/sq.po: 
	* po/sv.po: 
	* po/te.po: 
	* po/th.po: 
	* po/tr.po: 
	* po/uk.po: 
	* po/vi.po: 
	* po/zh_CN.po: Fixed desktop file typo (bug #520729). 
	Thanks Pedro Fragoso!

2008-04-22  Brian G. Merrell  <bgmerrell@gmail.com>

	* plugins/ipython_view.py:  modified the code to check for different 
	modifiers (CONTROL, SHIFT, and MOD1/ALT) and correct the behavior of
	the 'Home' key to perform as the user would expect (bug #431882).

2008-04-21  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* confugure.in:
	* README: Updated to version 1.3.1.

	* pyreqs.py: Check that the version of pyatspi is current enough.

2008-04-21  Brian G. Merrell  <bgmerrell@gmail.com>

	* src/lib/accerciser/accerciser.py:  Added whitespace to strings (bug
	#528261).

2008-03-26  Eitan Isaacson  <eitan@ascender.com>

	* plugins/validate.glade:
	* plugins/validate.py: Implement save functionality, 