@@ -1,3 +1,12 @@
+2008-07-08  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accessible_treeview.py: 
+	* src/lib/accerciser/main_window.py: 
+	* src/lib/accerciser/plugin/plugin_manager.py: 
+	* src/lib/accerciser/tools.py: 
+	* src/lib/accerciser/ui_manager.py: Added a context menu to the
+	main tree.
+
 2008-07-02  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/accessible_treeview.py: Fixed
